package views;

import Utils.Console;

public class StartView {
	public void show() {
		new Console().write("----- MASTERMIND -----");
	}
}
